...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_local_lobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Local game"
        app:layout_constraintBottom_toBottomOf="@id/btn_bluetooth_lobby"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"></Button>

    <Button
...
